全面国际化

--- a/LeisureMap-OC/LeisureMap-OC/Resources/zh-Hans.lproj/Launch Screen.strings
+++ b/LeisureMap-OC/LeisureMap-OC/Resources/zh-Hans.lproj/Launch Screen.strings
@@ -1,6 +1,6 @@
 
 /* Class = "UILabel"; text = "LeisureMap-OC"; ObjectID = "GJd-Yh-RWb"; */
-"GJd-Yh-RWb.text" = "LeisureMap-OC";
+"GJd-Yh-RWb.text" = "玩吧-OC";
 
 /* Class = "UILabel"; text = "Copyright © 2018年 YungFan All rights reserved"; ObjectID = "obG-Y5-kRd"; */
 "obG-Y5-kRd.text" = "Copyright © 2018年 YungFan All rights reserved";
